vite_react_app was replaced to vite-react-learning-app

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-react-app",
+  "name": "vite-react-learning-app",
   "private": true,
   "version": "0.1.0",
   "type": "module",
